# peasant

./: .gitignore  LICENSE  MISC.md  README.md
boot_test/: Readme.md
boot_test/barebone/: run.sh
boot_test/memory/: run.sh
boot_test/print/: run.sh
esp32/: AT.md  CrossCompile.md  Todos.md
esp32/rtos-project/adc/main/: test_main.c
esp32/rtos-project/gpio/main/: test_main.c
esp32/rtos-project/rtos-uart-oled/: Makefile  OLED_Font.h  adc.c  adc.h  getline.c  main.c  uart.c  uart.h
esp32/rtos-project/server/: Makefile  ReadMe.md
esp32/rtos-project/server-uart/main/: test_main.c
esp32/rtos-project/server-uart/scripts/: client.py
esp32/rtos-project/server/main/: test_main.c
esp32/rtos-project/test/main/: test_main.c
iofd/epool/: Makefile  main.c
iofd/epool-server/: Makefile  client.c  server.c
iofd/template/: Makefile
iofd/websocket/: main.c
ipc/fifo/: Makefile  fifo_w.c
ipc/shm/: shm_r.c  shm_w.c
ipc/sysv/mq/: Makefile  mq_r.c  mq_w.c
ipc/sysv/semp/: Makefile  semp.c
ipc/sysv/shm/: Makefile  shm_r.c  shm_w.c
kernel_test/: .Module.symvers.cmd  .chardev.h.swp  .modules.order.cmd  .test_simple.ko.cmd  .test_simple.mod.cmd  .test_simple.mod.o.cmd  .test_simple.o.cmd  Makefile  chardev.c  chardev.h  modules.order  procfs.c  seq_fs.c  sys-vars.c  test_ioctl.c  test_simple.c  test_simple.ko  test_simple.mod.c
ldd3/: ReadMe.md
libc_template/kernel/arch/i386/: make.config  tty.c
libc_test/: Readme.md
libc_test/kernel/: Makefile.txt  myos.kernel
libc_test/kernel/arch/i386/: tty.c
llvm/: GCC_int.md  LLVM.md  MLIR.md
llvm/ast/: Makefile  main.cpp
llvm/ast/ast/: BinaryExprAST.cpp  CallExprAST.cpp  FunctionAST.cpp
llvm/ast/kaleidoscope/: kaleidoscope.cpp  kaleidoscope.h
llvm/ast/passes/: pass.cpp  pass.h
llvm/circt/: ReadMe.md
llvm/cpu0_test/: CMakeLists.txt  main.c  test.td
llvm/cuda/: Makefile  kernel_test.cu  kernel_test.h  main.c
llvm/ebpf/: ReadMe.md
llvm/ebpf/buffer/: Makefile  findmap.c  hello-buffer-config.bpf.c
llvm/ebpf/template/: Makefile  func.c  main.c
llvm/ebpf/test/: Makefile  main.c
llvm/ebpf/verifier/: Makefile  hello-verify.bpf.c  hello-verify.c
llvm/lifting/: ReadMe.md
llvm/llvm-ir/: Makefile  ReadMe.md  add.c  branch.c  call.c  for.c  goto.c  passes-backup.sh  passes.sh  simd.c  struct.c  test.sh
llvm/llvm-rt/: ReadMe.md
llvm/mlir/convert2mlir/: CMakeLists.txt  Debug.sh  toyc.cpp
llvm/mlir/convert2mlir/mlir/: ToyCombine.cpp
llvm/mlir/convert2mlir/test/: test3.toy
llvm/mlir/test/: CMakeLists.txt  test.sh
llvm/mlir/toy/: CMakeLists.txt  ToyDialect-Ops.h  ToyDialect-Ops.td  ToyDialect.cpp  ToyDialect.h  test.sh  toy.ast  toyDIalect.td
llvm/mlir/toyc-Ch2/: CMakeLists.txt  toyc.cpp
llvm/mlir/toyc-Ch2/mlir/: MLIRGen.cpp
llvm/mlir/toyc-Ch3/: CMakeLists.txt  Debug.sh  toyc.cpp
llvm/mlir/toyc-Ch4/: CMakeLists.txt  Debug.sh  toyc.cpp
llvm/mlir/toyc-Ch5/: CMakeLists.txt  toyc.cpp
llvm/mlir/transform-external/: CMakeLists.txt
llvm/opt-plugin/: new.cpp
llvm/pass-test/pass-legacy/: CMakeLists.txt  legacy.cpp  loop.cpp  modules.cpp
llvm/pass-test/template/: CMakeLists.txt  new.cpp
llvm/pass-test/vectorize/: CMakeLists.txt  LoopVectorizationLegality.cpp  LoopVectorizationPlanner.h  LoopVectorize.cpp  SLPVectorizer.cpp  VPlan.cpp  VPlanConstruction.cpp  VPlanPredicator.cpp  VPlanTransforms.cpp  VectorCombine.cpp  new.cpp  test.sh
llvm/pass-test/vectorize/inc/: LoopVectorizationLegality.h
llvm/tablegen/: Makefile
llvm/tablegen/Instr/: Foo.td  FooInstrInfo.td  FooRegisterInfo.td  FooSchedule.td
llvm/tablegen/Records/: class.td  foreach.td  let.td  multiclass.td  template.td
llvm/test/addPass/: Makefile
llvm/test/flow/: Makefile  test.code
llvm/test/jit/: main.cpp
llvm/test/var/: Makefile
llvm/vectorize/: VPlan.cpp  VPlanTransforms.cpp  VPlanTransforms.h  VPlanUnroll.cpp  debug.sh  test.sh
llvm/vectorize/inc/: LoopVectorize.h
llvm/vectorize/input/: simd.ll
loongson/: CrossCompile.md  ReadMe.md
sec_test/buffer_overflow/: CMakeLists.txt  main.cpp
sec_test/type_convert/: main.cpp
server-test/epool/: main.c
server-test/epool-server/: common.h
stm32/: CrossCompile.md  MCU.md  ReadMe.md
stm32-hal/blinky/: CMakeLists.txt  blinky.c  test.sh
stm32-hal/cmake/: FindBSP.cmake  FindCMSIS.cmake  FindFreeRTOS.cmake  FindHAL.cmake
stm32-hal/cmake/stm32/: devices.cmake  f1.cmake
stm32-hal/freertos/: CMakeLists.txt  flash.sh  main.c  main.h
stm32-hal/test/: Makefile  Makefile.incl  main.c
stm32-hal/test/inc/: stm32f1xx_hal_conf.h  stm32f1xx_hal_def.h
stm32/led_test/: Makefile  main.c
stm32/ledtest/: Makefile  Makefile copy.incl  Makefile.incl  main.c
stm32/pwm/: main.c
stm32/pwn-2motor/: main.c
stm32/rtos-adc/: Makefile  main.c
stm32/rtos-can/: Makefile  Makefile.rtos  canmsgs.c  canmsgs.h  main.c  oled.h
stm32/rtos-can/include/: FreeRTOSConfig.h
stm32/rtos-dma/: Makefile  main.c  main_backup.c
stm32/rtos-led/: Makefile  Makefile.incl  main.c  meter.c  stm32f103c8t6.ld  ugui.c  usbcdc.c
stm32/rtos-led/include/: mcuio.h  meter.h  oled.h  ugui.h  ugui_config.h
stm32/rtos-mpu/: Makefile  main.c  mpu6050.c  mpu6050.h  mpu6050_reg.h  myI2C.c  myI2C.h  oled.c
stm32/rtos-oled/: Makefile  main.c
stm32/rtos-oled/include/: FreeRTOSConfig.h
stm32/rtos-template/: Makefile  Makefile.rtos  main.c
stm32/rtos-uart-oled/: Makefile.incl  uart.c
stm32/rtos-usbcdc/: Makefile  adventure.c  common.h  main.c  usbcdc.c
stm32/rtos-usbcdc/include/: FreeRTOSConfig.h  usbcdc.h
stm32/rtos-winbond/: Makefile  main.c  mcuio.c  miniprintf.c  stm32f103c8t6.ld  usbcdc.c
stm32/rtos-winbond-hw/: getline.c  intelhex.c  main.c  uartlib.c
stm32/rtos-winbond-hw/include/: FreeRTOSConfig.h  uartlib.h
stm32/rtos-winbond/include/: getline.h  intelhex.h  usbcdc.h
stm32/uart_test/: Makefile  Makefile.incl  main.c
stm32/uart_test copy/: miniprintf.c  miniprintf.h
troll-for-wine/: install-32dep.sh  install-deps.sh
troll-ue/: unpack.sh
tshark/: ReadMe.md  ffmpeg.sh
unp_test/: Readme.md  config.h
unp_test/inc/: unp.h
v8/: ReadMe.md
xv6/: ReadMe.md
(+57 files in other folders)
